<resources>
    <string name="app_name">Samantha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="start_station">start station</string>
    <string name="final_station">final station</string>
    <string name="arrow">arrow</string>
    <string name="delete">delete</string>
    <string name="toast_warn_sms_permission_not_granted">您未授权读取短信，无法帮您处理短信</string>
    <string name="ic_collapse_description">icon collapse</string>

    <string name="today">今天</string>
    <string name="travel">行程</string>
    <string name="invitation">邀请</string>
    <string name="finance">财务</string>
    <string name="others">其他</string>
    <string name="template">模板</string>
    <string name="setting">设置</string>
    <string name="archive">归档</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello Blank</string>
    <string name="title_activity_template">模板</string>
    <string name="desc_template_avatar">template avatar</string>
    <string name="template_version">0.1.1</string>
    <string name="template_description">description of the template, It can be very very long, even seceral lines</string>
    <string name="template_title">Title of the template</string>
    <string name="title_activity_add_edit_template">编辑模板</string>
    <string name="hint_template_origin">原文</string>
    <string name="hint_template_pattern">长按从短信改编模板</string>
    <string name="tag">标记</string>
    <string name="action_next_step">下一步</string>
    <string name="action_last_step">上一步</string>
    <string name="hint_template_selection_name">给选中的文本取个名字吧...</string>
    <string name="hint_template_selection_meta">这是什么类型的数据呢？时间，地点，编号之类的..</string>
    <string name="edit_from_sms">从短信改编</string>
    <string name="sender">发送者</string>
    <string name="time_demo">12:00</string>
    <string name="sms_content">短信内容</string>
    <string name="deleted">已删除</string>
    <string name="undo">撤销</string>
    <string name="order_number">订单号</string>
    <string name="works_done">事情都做完了</string>
    <string name="select_sms">选择短信</string>
    <string name="done">已完成</string>
    <string name="history_cards">历史卡片</string>
    <string name="today_todo">今日待办</string>
    <string name="today_done">今日完成</string>
    <string name="search_hint">搜索...</string>

</resources>
