<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_today"
            android:title="@string/today_todo"/>
        <item
            android:id="@+id/nav_done"
            android:icon="@drawable/ic_done_black_24dp"
            android:title="@string/today_done"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history_cards"/>

    </group>

    <group android:id="@+id/nav_settings">
        <item
            android:id="@+id/nav_templates"
            android:icon="@drawable/ic_template"
            android:title="@string/template"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting"/>
    </group>


</menu>
