<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/template"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/img_template_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_template_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/tv_template_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="0dp"
        android:text="@string/template_title"
        android:textAppearance="@style/CardTheme.TitleTextStyle"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_template_avatar"/>

    <TextView
        android:id="@+id/tv_template_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/template_version"
        app:layout_constraintBottom_toBottomOf="@+id/tv_template_title"
        app:layout_constraintLeft_toRightOf="@+id/tv_template_title"
        app:layout_constraintTop_toTopOf="@+id/tv_template_title"/>

    <TextView
        android:id="@+id/tv_template_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="72dp"
        android:text="@string/template_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_template_title"
        app:layout_constraintVertical_bias="0.0"/>


</android.support.constraint.ConstraintLayout>